1
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.8/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build
Shared read-only dependency cache is an incubating feature.
> Task :clean UP-TO-DATE

> Task :compileJava FAILED
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:58: error: illegal start of type
package com.scf.manager.mvc.service;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:58: error: expected
package com.scf.manager.mvc.service;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:60: error: illegal start of type
import com.scf.manager.common.exception.ResourceNotFoundException;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:60: error: expected
import com.scf.manager.common.exception.ResourceNotFoundException;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:61: error: illegal start of type
import com.scf.manager.common.util.AppUtil;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:61: error: expected
import com.scf.manager.common.util.AppUtil;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:62: error: illegal start of type
import com.scf.manager.mvc.domain.BaseImage;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:62: error: expected
import com.scf.manager.mvc.domain.BaseImage;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:63: error: illegal start of type
import com.scf.manager.mvc.dto.BaseImageDTO;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:63: error: expected
import com.scf.manager.mvc.dto.BaseImageDTO;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:64: error: illegal start of type
import com.scf.manager.mvc.repository.BaseImageRepository;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:64: error: expected
import com.scf.manager.mvc.repository.BaseImageRepository;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:65: error: illegal start of type
import lombok.RequiredArgsConstructor;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:65: error: expected
import lombok.RequiredArgsConstructor;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:66: error: illegal start of type
import lombok.extern.slf4j.Slf4j;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:66: error: expected
import lombok.extern.slf4j.Slf4j;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:67: error: illegal start of type
import org.springframework.stereotype.Service;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:67: error: expected
import org.springframework.stereotype.Service;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:68: error: illegal start of type
import org.springframework.transaction.annotation.Transactional;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:68: error: expected
import org.springframework.transaction.annotation.Transactional;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:70: error: illegal start of type
import java.util.List;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:70: error: expected
import java.util.List;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:71: error: illegal start of type
import java.util.stream.Collectors;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:71: error: expected
import java.util.stream.Collectors;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:73: error: illegal start of type
import static com.scf.manager.common.constants.ExceptionConst.BASEIMAGE_NOTFOUND_EXCEPTION;
^
/data/codebot/workspace/src/main/java/com/scf/manager/mvc/service/BaseImageService.java:73: error: expected
import static com.scf.manager.common.constants.ExceptionConst.BASEIMAGE_NOTFOUND_EXCEPTION;
^
26 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
2 actionable tasks: 1 executed, 1 up-to-date
